# zotero2qmd

./: README.md  pyproject.toml
src/zotero2qmd/: pub_type_translate.py  zotero2qmd.py
